// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 0 expense when no expenses are provided 1`] = `
<div>
  <h1>
    Viewing 
    0
     
    expenses
     totalling 
    $0.00
     
  </h1>
</div>
`;

exports[`should render 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
     
  </h1>
</div>
`;

exports[`should render multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    $3.23
     
  </h1>
</div>
`;
